--- a/src/main/resources/templates/books/form.html
+++ b/src/main/resources/templates/books/form.html
@@ -15,7 +15,7 @@
 <body class="bg-light vsc-initialized" data-new-gr-c-s-check-loaded="14.1057.0" data-gr-ext-installed="">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" th:href="@{/home}"">Book Exchange Portal</a>
+            <a class="navbar-brand" th:href="@{/home}">Book Exchange Portal</a>
         </div>
     </nav>
     <div class="container text-center">
