--- a/src/main/resources/templates/loginAndSignUp/signup_form.html
+++ b/src/main/resources/templates/loginAndSignUp/signup_form.html
@@ -59,7 +59,7 @@
             <div class="form-group row">
                 <label class="col-4 col-form-label">Phone Number: </label>
                 <div class="col-8">
-                    <input type="text" th:field="*{phoneNumber}" class="form-control" required />
+                    <input type="number" th:field="*{phoneNumber}" class="form-control" required />
                 </div>
             </div>
             <br>
