--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -42,6 +42,9 @@
                         <li class="nav-item">
                             <a class="nav-link" th:href="@{/deleteAccountPage}">Delete Account</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" th:href="@{/walletStatusPage}">Wallet</a>
+                        </li>
                     </ul>
                     <ul class="nav navbar-nav nav navbar-right">
                         <li class="nav-item">
