--- a/src/main/resources/templates/walletStatusPage.html
+++ b/src/main/resources/templates/walletStatusPage.html
@@ -55,13 +55,15 @@
 <main class="flex-shrink-0">
     <div class="container align-content-center">
         <h1 class="mt-5">Your current Wallet Status</h1>
+        <h2 class="mt-5" th:text="'Rs. ' + ${currentAmount}"></h2>
         <br>
-        <h2 class="mt-5" th:text="'Rs ' + ${currentAmount}"></h2>
         <form th:action="@{/home}">
             <div>
-                <button type="submit" class="btn btn-outline-success">Home</button>
+                <button type="submit" class="btn btn-success">Add more</button>
+                <button type="submit" class="btn btn-outline-default" id="form2">Home</button>
             </div>
         </form>
+        <form name="form2" th:action="@{/home}"></form>
         <br>
     </div>
 </main>
